--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,20 @@
       {
         "src": "djangotest/wsgi.py",
         "use": "@vercel/python"
+      },
+      {
+        "src": "build.sh",
+        "use": "@vercel/static-build",
+        "config": {
+            "distDir": "staticfiles"
+        }
       }
     ],
     "routes": [
+        {
+            "src": "/static/(.*)",
+            "dest": "static/$1"
+      },
       {
         "src": "/(.*)",
         "dest": "djangotest/wsgi.py"
